--- a/XCode/DewertOkin/DewertOkin/Info.plist
+++ b/XCode/DewertOkin/DewertOkin/Info.plist
@@ -21,9 +21,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>Bluetooth</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Timer</string>
+	<string>Bluetooth</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
