--- a/XCode/DewertOkin/DewertOkin/Info.plist
+++ b/XCode/DewertOkin/DewertOkin/Info.plist
@@ -23,7 +23,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>Remote</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
+	<string>Timer</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
