--- a/XCode/DewertOkin/DewertOkin/Info.plist
+++ b/XCode/DewertOkin/DewertOkin/Info.plist
@@ -25,7 +25,9 @@
 	<key>NSHealthUpdateUsageDescription</key>
 	<string>We use the steps you took as an indicator of your activity.</string>
 	<key>UIBackgroundModes</key>
-	<array/>
+	<array>
+		<string>fetch</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>Remote</string>
 	<key>UIMainStoryboardFile</key>
